# hf-hackathon

./: .gitignore  .gitmodules  README.md
.github/ci/: benchmark_config.json
.github/ci/et-sdk/: .gitignore  CMakeLists.txt
.github/ci/firmware/: README.md
.github/ci/launcher/: CMakeLists.txt  erbium_soc1sim_argbuf_dynmem.cpp
.github/ci/platform/: README.md  requirements.txt
.github/ci/scripts/: benchmark_config_helpers.py  build_launcher.sh  build_leaderboard_elf.sh  changed_benchmark_models.py  ci_preflight.sh  ensure_cmake.sh  env.sh  format_pr_comment.py  install_et_sdk.sh  install_firmware.sh  install_git_hooks.sh  install_toolchain.sh  local_benchmark.sh  merge_leaderboard.py  prepare_benchmark_inputs.sh  resolve_et_platform_paths.sh  run_llama_server_benchmark.py  run_model_benchmark.sh  score_results.py  update_readme_leaderboard.py
.github/ci/support/: hart_report_crt.S
.github/workflows/: benchmark-board.yml  benchmark.yml  sync-huggingface.yml
data/: dncnn.json  gemma3n_e2b.json  lfm25.json  llama32_1b.json  tinyllama11b.json  whisper.json  yolo.json
docs/: BOARD_ACCESS.md  ET_SOC1_QUICKSTART.md  SUBMISSION_GUIDE.md  aifoundry_hackathon_announcement_draft.md
docs/opinionated_porting_options/: afonso.md  martin.md
ported_models/dncnn/: MODEL.md  README.md
ported_models/dncnn/docs/: optimizations.md
ported_models/ggonnx/: README.md  THIRD_PARTY.md  artifacts.json
ported_models/llama_cpp_et/: README.md  THIRD_PARTY.md  artifacts.json
ported_models/whisper/: MODEL.md  README.md
ported_models/yolo/: MODEL.md  README.md
(+98 files in other folders)
